#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([pharma], [0.1.0], [www.javiermontenegro.com])
AM_INIT_AUTOMAKE([1.9 foreign subdir-objects])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
# AC_CHECK_HEADERS([stdlib.h string.h termios.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
# AC_FUNC_MALLOC
# AC_FUNC_REALLOC
# AC_CHECK_FUNCS([memset strchr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
